--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,8 +48,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     //image
-    implementation("com.github.bumptech.glide:glide:4.12.0") {
-        exclude group: "com.android.support"
-    }
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
     implementation 'de.hdodenhof:circleimageview:3.0.0'
 }
